# tconsole

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  minivim.hpp
core/src/: main.cpp
inc/: minivim.hpp
source/: main.cpp  minivim.cpp
